RESOLVED FIXED165202
[CSS Parser] Fix crash in -webkit-shape-outside parsing
https://bugs.webkit.org/show_bug.cgi?id=165202
Summary [CSS Parser] Fix crash in -webkit-shape-outside parsing
Dave Hyatt
Reported 2016-11-30 10:36:56 PST
[CSS Parser] Fix crash in -webkit-shape-outside parsing
Attachments
Patch (1.81 KB, patch)
2016-11-30 10:39 PST, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2016-11-30 10:39:16 PST
Dave Hyatt
Comment 2 2016-11-30 10:42:42 PST
Fixed in r209137.
Note You need to log in before you can comment on or make changes to this bug.