[CSS Parser] Fix crash in -webkit-shape-outside parsing https://bugs.webkit.org/show_bug.cgi?id=165202

Reviewed by Dean Jackson.

* css/CSSBasicShapes.cpp:
(WebCore::buildSerializablePositionOffset):
The old parser never passed in a singleton value ID for top/right/bottom/left.
The new parser does, and it exposed a bug in the serialization code for
shapes that didn't properly create the offset primitive value as a percentage
in those cases.



Canonical link: https://commits.webkit.org/182823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209137 268f45cc-cd09-0410-ab3c-d52691b4dbfc